# bobday-cli

./: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
bobday_app/: __init__.py  app.py  constants.py  rest_client.py
tests/: conftest.py  fixtures.py  test_app.py
